src/web/flaat/normal.css
/* Copyright (C) 2024  Niels Martignène <niels.martignene@protonmail.com>

   Permission is hereby granted, free of charge, to any person obtaining a copy of
   this software and associated documentation files (the “Software”), to deal in
   the Software without restriction, including without limitation the rights to use,
   copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the
   Software, and to permit persons to whom the Software is furnished to do so,
   subject to the following conditions:

   The above copyright notice and this permission notice shall be included in all
   copies or substantial portions of the Software.

   THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND,
   EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
   OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
   NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
   HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
   WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
   FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
   OTHER DEALINGS IN THE SOFTWARE. */

html {
    --anchor_color: var(--primary_color);

    --top_height: 90px;
    --top_padding: 6px;
    --small_height: 80px;
    --top_background: white;
    --footer_background: #f6f6f9;

    height: 100%;
    scroll-padding-top: calc(var(--top_height) + 10px);
}

body {
    min-height: 100%;
    margin: 0;
    padding: 0;

    font-family: 'Open Sans', sans-serif;
    font-size: 17px;
    line-height: 1.5;

    background: white;
    color: #383838;

    display: flex;
    flex-direction: column;
}

a {
    color: var(--anchor_color, #383838);
    cursor: pointer;
    text-decoration: none;
}
a:hover { text-decoration: underline; }
a:has(> img) { text-decoration: none !important; }

#top {
    position: sticky;
    top: 0;
    background: var(--top_background);
    z-index: 9;
    border-bottom: 2px solid var(--top_background);
    transition: border-bottom-color 0.4s ease;
}
#top.border { border-bottom-color: #383838; }
#top menu {
    position: sticky;
    top: 0;
    box-sizing: border-box;
    max-width: 1200px;
    height: var(--top_height);
    box-sizing: border-box;
    margin: 0 auto;
    padding: var(--top_padding);
    overflow: visible;
    z-index: 1;
    display: flex;
    align-items: center;
    gap: 10px;
}
#top li {
    position: relative;
    list-style-type: none;
    padding-left: 8px;
    border-left: 2px solid rgba(0, 0, 0, 0);
}
#top li a {
    color: #383838;
    text-decoration: none;
}
#top li > div a.category {
    cursor: default;
    pointer-events: none;
}
#top li > a {
    display: block;
    border-bottom: 1px solid #383838;
    text-transform: uppercase;
}
#top li > a:hover, #top li.active > a {
    margin-bottom: -1px;
    border-bottom: 2px solid var(--primary_color);
    color: var(--primary_color);
}
#top li > a.active {
    font-weight: bold;
    border-bottom-color: var(--primary_color);
    color: var(--primary_color);
}
#top li > div { display: none; }
.nojs #top li:has(> div):hover, #top li:has(> div).active { border-left-color: var(--primary_color); }
.nojs #top li:has(> div):hover > a, #top li:has(> div).active > a {
    margin-bottom: 1px;
    border-bottom: none;
}
.nojs #top li:hover > div, #top li.active > div {
    position: absolute;
    margin-top: 0px;
    margin-left: -10px;
    width: 220px;
    padding: 12px 1em 10px 1em;
    display: flex;
    flex-direction: column;
    background: white;
    border-left: 2px solid var(--primary_color);
    border-bottom: 2px solid var(--primary_color);
}
#top li > div > a { margin-top: 3px; }
#top li > div > a.active { font-weight: bold; }
#top li > div > a:hover { text-decoration: underline; }

#logo {
    height: 70%;
    object-fit: contain;
    margin-right: 2em;
}
#logo > img {
    width: 100%;
    height: 100%;
    object-fit: contain;
}

#side menu {
    margin: 0;
    padding: 8px;
    width: 224px;
    box-sizing: border-box;

    position: fixed;
    left: calc(50% + 360px);
    top: calc(var(--top_height) + 34px);

    background: #fdfdfd;
    border: 2px solid #383838;
}
#side li { list-style-type: none; }
#side a {
    display: block;
    padding: 1px;
    color: #383838;
    text-decoration: none;
}
#side a:hover { text-decoration: underline; }
#side a.active { font-weight: bold; }
#side a.lv1 { padding-left: 12px; }
#side a.lv2 { padding-left: 27px; }
#side a.lv3 { padding-left: 42px; }
#side a.lv4 { padding-left: 57px; }
#side a.lv5 { padding-left: 72px; }
#side a.lv6 { padding-left: 87px; }

#deploy { display: none; }

main {
    flex: 1;
    width: 100%;
    max-width: 1200px;
    box-sizing: border-box;
    margin: 20px auto 0 auto;
    padding: 0 16px 16px 16px;
}
#side ~ main { padding-right: 290px; }

footer {
    padding: 0.5em;
    background: var(--footer_background);
    display: flex;
    gap: 1.5em;
    align-items: center;
    justify-content: center;
}
footer > img { filter: saturate(0%) brightness(0); }

p { margin: 1em 0 0 0; }
p:first-child, h1 + p, h2 + p, h3 + p { margin-top: 0; }

main img { max-width: 100%; }

h1 {
    margin: 0 0 0.5em 0;
    font-size: 1.6em;
    text-transform: uppercase;
    font-weight: normal;
    color: #383838;
    font-weight: bold;
}
h2 {
    margin: 0 0 1em 0;
    display: table;
    padding: 2px 14px 2px 30px;
    background: #191f22;
    font-size: 1.2em;
    font-weight: normal;
    text-transform: uppercase;
    color: white;
}
h3 {
    margin: 0 0 0.8em 0;
    display: table;
    padding: 2px 14px 2px 40px;
    background: #ddd;
    font-size: 1.1em;
    font-weight: normal;
    font-style: italic;
    text-transform: uppercase;
    color: #383838;
}
* + h1, * + h2, * + h3 { margin-top: 1.2em; }

table {
    margin: 1em auto;
    border-collapse: collapse;
}
th {
    padding: 0.5em;
    background: #fafafa;
    border: 1px solid #ebebeb;
}
thead th { text-align: center; }
tbody th {
    text-align: left;
    font-weight: normal;
    font-style: italic;
}
td {
    padding: 0.5em;
    background: white;
    border: 1px solid #ebebeb;
}
th.center, td.center { text-align: center; }
th.right, td.right { text-align: right; }

table + div.legend {
    margin-top: calc(-1em + 2px);
    text-align: center;
    font-size: 0.8em;
}

.buttons {
    margin: 1em;
    display: flex;
    gap: 20px;
    justify-content: center;
    flex-wrap: wrap;
}
.buttons > a {
    display: block;
    width: 40%;
    min-width: 250px;
    background: var(--secondary_color);
    color: white;
    padding: 0.6em 1em;
    text-decoration: none;
    text-align: center;
}
.buttons > a:hover {
    filter: brightness(80%) contrast(150%);
    color: white;
}
.buttons > a.disabled {
    pointer-events: none;
    filter: saturate(10%);
}

code:not(.hljs) {
    padding: 2px 6px;
    font-family: monospace;
    font-size: 14px;
    background: #eee;
}
pre > code:not(.hljs) {
    padding: 0;
    font-size: inherit;
    background: transparent;
}

pre {
    position: relative;
    margin: 1em 20px;
    padding: 0;
    border: 1px solid #ebebeb;
    background: #ffffff;
    overflow: auto;
    font-size: 12px;
    z-index: 0;
}
.nojs pre { padding: 6px; }

.alert {
    margin: 1.8em 1em 1.4em 1em;
    padding: 0.8em 1em;
    background: #fcfcfc;
    border-left: 3px solid var(--color);
}
.alert:first-child { margin-top: 0; }
.alert > .title {
    font-weight: bold;
    color: var(--color);
}
.alert > .title::after { content: var(--text); }
.alert.note {
    --color: #316dca;
    --text: 'Note';
}
.alert.tip {
    --color: #347d39;
    --text: 'Tip';
}
.alert.important {
    --color: #8256d0;
    --text: '⚠\FE0E  Important';
}
.alert.warning {
    --color: #966600;
    --text: '⚠\FE0E  Warning';
}
.alert.caution {
    --color: #c93c37;
    --text: '⚠\FE0E  Caution';
}

.footnotes {
    margin: 2em 1em;
    font-style: italic;
}

